--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-data\developer_survey_2021
-data\developer_survey_2020
-data\developer_survey_2019
-data\developer_survey_2018
-data\developer_survey_2017
+\data\developer_survey_2021
+\data\developer_survey_2020
+\data\developer_survey_2019
+\data\developer_survey_2018
+\data\developer_survey_2017
